--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,13 +62,36 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.5s;
+      transition-timing-function: cubic-bezier(0.32, 1.63, 0.63, 1.38);
     }
 
   </style>
 
   <script>
+  const secondHand = document.querySelector('.second-hand')
+  const minuteHand = document.querySelector('.min-hand')
+  const hourHand = document.querySelector('.hour-hand')
 
+    function setDate() {
+      const now = new Date()
 
+      const seconds = now.getSeconds()
+      const minutes = now.getMinutes()
+      const hours = now.getHours()
+
+      const secondsDegrees = (seconds/60)*360 + 90
+      const minutesDegrees = (minutes/60)*360 + 90
+      const hourDegrees = (hours/12)*360 + 90
+      
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`
+      minuteHand.style.transform = `rotate(${minutesDegrees}deg)`
+      hourHand.style.transform = `rotate(${hourDegrees}deg)`
+    }
+
+    setInterval(setDate, 1000)
   </script>
 </body>
 </html>
